@@ -14,7 +14,7 @@
 # Copyright (c) 2003-2008 Patrick Thoyts
 #
 #------------------------------------------------------------------------------
-# RCS: @(#) $Id: rules.vc,v 1.2 2007/09/06 21:01:55 patthoyts Exp $
+# RCS: @(#) $Id: rules.vc,v 1.3 2008/03/19 02:34:21 patthoyts Exp $
 #------------------------------------------------------------------------------
 
 !ifndef _RULES_VC
@@ -596,6 +596,16 @@ TK_LIBRARY	= $(_TKDIR)\library
 !endif
 !endif
 !endif
+
+
+#----------------------------------------------------------
+# Setup the fully qualified OUT_DIR path as OUT_DIR_PATH
+#----------------------------------------------------------
+!if [echo OUT_DIR_PATH = \>> version.vc] \
+    && [nmakehlp -Q "$(OUT_DIR)" >> version.vc]
+!endif
+!include version.vc
+
 
 #----------------------------------------------------------
 # Display stats being used.
